--- a/Assets/UI/StyleSheet.uss
+++ b/Assets/UI/StyleSheet.uss
@@ -1,75 +1,22 @@
 .button {
-    flex-grow: 1;
-    flex-shrink: 0;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    width: auto;
-    display: flex;
-    visibility: visible;
-    overflow: visible;
-    padding-left: 11%;
-    padding-right: 11%;
-    padding-top: 11%;
-    padding-bottom: 11%;
-    flex-direction: column;
-    flex-wrap: wrap;
-    min-width: initial;
-    min-height: initial;
-    max-width: none;
-}
-
-.question {
     align-items: center;
-    -unity-text-align: upper-center;
-    font-size: 30px;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 4%;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
-.answer {
-    align-items: center;
-    -unity-text-align: upper-center;
-    font-size: 24px;
-    -unity-font-style: bold;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-self: auto;
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
-.numpad {
-    flex-grow: 1;
-    background-color: rgba(0, 0, 0, 0);
-    flex-basis: auto;
+    border-top-left-radius: 53px;
+    border-bottom-left-radius: 53px;
+    border-top-right-radius: 53px;
+    border-bottom-right-radius: 53px;
+    background-color: rgb(255, 255, 255);
+    -unity-background-image-tint-color: rgb(255, 0, 0);
     flex-direction: row;
-    align-self: flex-end;
-    width: initial;
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 0;
-    padding-bottom: 0;
-    height: auto;
-    align-items: flex-start;
-    justify-content: center;
     flex-wrap: wrap;
+    flex-grow: 0;
     flex-shrink: 0;
-    margin-top: 0;
-    max-width: initial;
-    max-height: initial;
+    color: rgb(0, 0, 0);
+    scale: 1 1;
+    transform-origin: left top;
+    font-size: 15px;
+    flex-basis: initial;
+    width: auto;
+    max-width: none;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
