--- a/Assets/UI/StyleSheet.uss
+++ b/Assets/UI/StyleSheet.uss
@@ -1,22 +1,23 @@
 .button {
-    align-items: center;
-    border-top-left-radius: 53px;
-    border-bottom-left-radius: 53px;
-    border-top-right-radius: 53px;
-    border-bottom-right-radius: 53px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    flex-basis: 33.333%;
+    flex-grow: 1;
+    -unity-background-image-tint-color: rgb(255, 255, 255);
     background-color: rgb(255, 255, 255);
-    -unity-background-image-tint-color: rgb(255, 0, 0);
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-grow: 0;
-    flex-shrink: 0;
-    color: rgb(0, 0, 0);
-    scale: 1 1;
-    transform-origin: left top;
-    font-size: 15px;
-    flex-basis: initial;
-    width: auto;
-    max-width: none;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-left-color: rgba(144, 144, 144, 0);
+    border-right-color: rgba(144, 144, 144, 0);
+    border-top-color: rgba(144, 144, 144, 0);
+    border-bottom-color: rgba(144, 144, 144, 0);
+    font-size: 240%;
+}
+
+.text-block {
+    font-size: 29px;
 }
