--- a/Assets/UI/StyleSheet.uss
+++ b/Assets/UI/StyleSheet.uss
@@ -1,11 +1,33 @@
 .button {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    flex-grow: 1;
+    flex-wrap: nowrap;
+    flex-basis: auto;
+    flex-direction: column;
+    flex-shrink: 1;
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    align-items: stretch;
+    align-self: auto;
+    width: 100%;
 }
 
 .text-block {
     font-size: 29px;
 }
 
-.button-container {
+.row {
+    flex-direction: row;
+    flex-basis: 100%;
     flex-grow: 1;
-    flex-basis: 33%;
+    width: 100%;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    justify-content: flex-start;
+    align-self: auto;
 }
