--- a/Assets/UI/StyleSheet.uss
+++ b/Assets/UI/StyleSheet.uss
@@ -1,8 +1,8 @@
 .button {
-    margin-left: 1px;
-    margin-right: 1px;
+    margin-left: 0;
+    margin-right: 0;
     margin-top: 0;
-    margin-bottom: 1px;
+    margin-bottom: 0;
     flex-grow: 1;
     flex-wrap: nowrap;
     flex-basis: auto;
