--- a/Assets/UI/Multipli_UI.uxml
+++ b/Assets/UI/Multipli_UI.uxml
@@ -1,16 +1,15 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/StyleSheet.uss?fileID=7433441132597879392&amp;guid=4e51d8174982f374f8429738a2553106&amp;type=3#StyleSheet" />
-    <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-items: stretch; flex-wrap: nowrap; overflow: hidden; flex-direction: row; flex-basis: auto; align-self: auto; justify-content: flex-start;">
+    <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-items: stretch; flex-wrap: nowrap; overflow: hidden; flex-direction: row; flex-basis: auto; align-self: auto; justify-content: flex-start; border-left-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-top-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255);">
         <ui:VisualElement name="Container" style="flex-grow: 0; flex-direction: column; width: 50%; padding-top: 2%; padding-left: 2%; align-items: stretch; justify-content: flex-start; align-self: auto; flex-basis: auto;">
-            <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="Score" class="question text-block txt" />
+            <ui:Label tabindex="-1" text="0" display-tooltip-when-elided="true" name="Score" class="text-block txt" style="-unity-font: url(&apos;project://database/Assets/Packages/Font/BubblegumSans-Regular.ttf?fileID=12800000&amp;guid=2de073e63f27c4f55aaae6420db6389f&amp;type=3#BubblegumSans-Regular&apos;); -unity-font-definition: url(&apos;project://database/Assets/Packages/Font/BubblegumSans-Regular%20SDF.asset?fileID=11400000&amp;guid=991bf5aa021e6492eb88621cb1016310&amp;type=2#BubblegumSans-Regular SDF&apos;); -unity-font-style: bold; color: rgb(0, 117, 255); font-size: 87px;" />
         </ui:VisualElement>
         <ui:VisualElement name="Container" style="flex-wrap: nowrap; flex-direction: column; width: auto; justify-content: center; align-items: center; flex-grow: 1; align-self: auto; flex-basis: 60%; flex-shrink: 0;">
-            <ui:VisualElement name="Text" style="-unity-text-align: upper-center; justify-content: flex-start; width: 100%; align-items: center; margin-bottom: 4%; flex-wrap: nowrap; flex-shrink: 0; flex-grow: 0; flex-basis: auto;">
-                <ui:Label tabindex="-1" text="Combien font" display-tooltip-when-elided="true" name="Question" class="question text-block" style="flex-grow: 0;" />
-                <ui:Label tabindex="-1" text="6 x 6 ?" display-tooltip-when-elided="true" name="CalculToResolve" class="question text-block" />
+            <ui:VisualElement name="Text" class="question" style="-unity-text-align: upper-center; justify-content: flex-start; width: auto; align-items: center; margin-bottom: 4%; flex-wrap: nowrap; flex-shrink: 1; flex-grow: 0; flex-basis: auto;">
+                <ui:Label tabindex="-1" text="6 x 6 ?" display-tooltip-when-elided="true" name="CalculToResolve" class="text-block" />
+                <ui:Label tabindex="-1" display-tooltip-when-elided="true" name="Answer" text="TEST" style="color: rgb(255, 255, 255);" />
             </ui:VisualElement>
-            <ui:VisualElement name="VisualElement" style="width: 50%; flex-grow: 0; flex-direction: column; flex-wrap: nowrap; flex-shrink: 0; flex-basis: 40%; max-width: 333px;">
-                <ui:Label tabindex="-1" display-tooltip-when-elided="true" name="Answer" text="TEST" style="background-color: rgb(255, 255, 255); align-self: center; width: 100%; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; flex-basis: 13%; flex-shrink: 1; flex-wrap: nowrap; justify-content: flex-start; border-top-left-radius: 10px; border-top-right-radius: 10px; -unity-text-align: middle-center; font-size: 20%; -unity-font-style: normal; min-height: 35px;" />
+            <ui:VisualElement name="VisualElement" style="width: 43%; flex-grow: 0; flex-direction: column; flex-wrap: nowrap; flex-shrink: 0; flex-basis: 45%; max-width: 333px;">
                 <ui:VisualElement name="Numpad" class="numpad" style="flex-wrap: nowrap; flex-direction: column; flex-grow: 1; align-items: auto; justify-content: flex-start; align-self: auto; height: auto; width: 100%; background-color: rgba(255, 0, 0, 0); flex-basis: auto;">
                     <ui:VisualElement name="VisualElement" class="row">
                         <ui:Button text="1" display-tooltip-when-elided="true" name="button1" class="button" />
@@ -28,7 +27,7 @@
                         <ui:Button text="9" display-tooltip-when-elided="true" name="button9" class="button" />
                     </ui:VisualElement>
                     <ui:VisualElement name="VisualElement" class="row">
-                        <ui:Button text="X" display-tooltip-when-elided="true" name="button-clear" class="button" style="border-bottom-left-radius: 10px;" />
+                        <ui:Button text="C" display-tooltip-when-elided="true" name="button-clear" class="button" style="border-bottom-left-radius: 10px;" />
                         <ui:Button text="0" display-tooltip-when-elided="true" name="button0" class="button" />
                         <ui:Button text="ok" display-tooltip-when-elided="true" name="button-ok" class="button" style="border-bottom-right-radius: 10px;" />
                     </ui:VisualElement>
