--- a/Assets/UI/UI_Countdown.uxml
+++ b/Assets/UI/UI_Countdown.uxml
@@ -1,2 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
+    <ui:VisualElement name="VisualElement" style="flex-grow: 1; background-color: rgba(237, 74, 96, 0.57); align-self: center; justify-content: center; width: 100%; -unity-text-align: upper-center; display: flex;">
+        <ui:Label tabindex="-1" text="3" display-tooltip-when-elided="true" name="CountDownText" style="-unity-font: url(&apos;project://database/Assets/Packages/Font/BubblegumSans-Regular.ttf?fileID=12800000&amp;guid=2de073e63f27c4f55aaae6420db6389f&amp;type=3#BubblegumSans-Regular&apos;); -unity-font-definition: url(&apos;project://database/Assets/Packages/Font/BubblegumSans-Regular%20SDF.asset?fileID=11400000&amp;guid=991bf5aa021e6492eb88621cb1016310&amp;type=2#BubblegumSans-Regular SDF&apos;); font-size: 915px; color: rgb(255, 255, 255);" />
+    </ui:VisualElement>
 </ui:UXML>
